--- a/Sec 1 - SAP Intro/5. Role Based Acess Fiori.md
+++ b/Sec 1 - SAP Intro/5. Role Based Acess Fiori.md
@@ -48,3 +48,69 @@
 ```
 
 Would you like any additional refinements? 🚀
+
+### [Section 1: Introduction to Role-Based Access in SAP Fiori]
+**Brief Description**: This section introduces the concept of role-based access in SAP Fiori, explaining how users are assigned specific roles to access relevant applications.
+
+- **[Sub-section 1: Role-Based User Interface]**: SAP Fiori is a role-based interface, meaning users can only see and access applications relevant to their job functions. For example, a user responsible for managing customer master data will see apps related to customer master, while a supplier management user will see supplier-related apps.  
+  *Timestamp*: 0:02 - 2:00
+
+- **[Sub-section 2: Identifying Missing Roles]**: If a user cannot see a specific app (e.g., "Manage Customer Master Data"), it indicates that the required role is missing from their user record. To identify the missing role, users can navigate to the SAP Fiori Apps Library.  
+  *Timestamp*: 2:00 - 4:00
+
+---
+
+### [Section 2: Using the SAP Fiori Apps Library]
+**Brief Description**: This section explains how to use the SAP Fiori Apps Library to identify the roles required for specific applications.
+
+- **[Sub-section 1: Accessing the SAP Fiori Apps Library]**: The SAP Fiori Apps Library is a web-based resource that provides details about all Fiori apps, including the roles required to access them. Users can search for specific apps (e.g., "Manage Customer Master Data") and view implementation information.  
+  *Timestamp*: 4:00 - 6:00
+
+- **[Sub-section 2: Finding Role Information]**: On the app's details page, users can navigate to the "Implementation Information" tab and scroll down to the "Configuration" section. Here, they will find the role required for the app (e.g., "SAP_BR_BUPA_MASTER_SPECIALIST").  
+  *Timestamp*: 6:00 - 8:00
+
+---
+
+### [Section 3: Assigning Roles to Users]
+**Brief Description**: This section demonstrates how to assign the identified role to a user in the SAP system.
+
+- **[Sub-section 1: Using Transaction Code SU01]**: To assign a role, users can navigate to transaction code SU01 (User Maintenance). Enter the username, click "Change" or "Display," and go to the "Roles" tab. If the required role is missing, it can be added here.  
+  *Timestamp*: 8:00 - 10:00
+
+- **[Sub-section 2: Using Transaction Code PFCG]**: If the role is not available in the system, it can be created or copied using transaction code PFCG (Role Maintenance). Users can search for the role (e.g., "SAP_BR_BUPA_MASTER_SPECIALIST") and copy it to create a custom role. Custom roles should start with "Y" or "Z" to avoid conflicts with standard roles.  
+  *Timestamp*: 10:00 - 14:00
+
+- **[Sub-section 3: Assigning the Role to a User]**: After creating or copying the role, users can assign it to the relevant user in SU01. This ensures the user can access the required app on their Fiori Launchpad.  
+  *Timestamp*: 14:00 - 16:00
+
+---
+
+### [Section 4: Best Practices for Role Management]
+**Brief Description**: This section outlines best practices for managing roles in SAP Fiori.
+
+- **[Sub-section 1: Custom Roles]**: Always create custom roles starting with "Y" or "Z" to avoid modifying standard roles. This ensures that standard roles remain unchanged and can be used in the future.  
+  *Timestamp*: 16:00 - 18:00
+
+- **[Sub-section 2: Role Maintenance]**: Use transaction code PFCG to maintain roles, including creating, copying, and deleting roles. The "Where Used List" feature in PFCG helps identify which users are assigned to a specific role.  
+  *Timestamp*: 18:00 - 20:00
+
+- **[Sub-section 3: Referencing Existing Users]**: To simplify role assignment, users can reference an existing user who already has the required roles. This allows for quick copying of roles to new users.  
+  *Timestamp*: 20:00 - 22:00
+
+---
+
+### [Section 5: Key Takeaways]
+**Brief Description**: This section summarizes the key points discussed in the lecture.
+
+- **[Sub-section 1: Role-Based Access]**: SAP Fiori is a role-based interface, and users must have the appropriate roles assigned to access specific apps.  
+  *Timestamp*: 22:00 - 24:00
+
+- **[Sub-section 2: Using the SAP Fiori Apps Library]**: The SAP Fiori Apps Library is a valuable resource for identifying the roles required for specific applications.  
+  *Timestamp*: 24:00 - 26:00
+
+- **[Sub-section 3: Assigning and Managing Roles]**: Roles can be assigned to users using transaction codes SU01 and PFCG. Custom roles should start with "Y" or "Z" to avoid conflicts with standard roles.  
+  *Timestamp*: 26:00 - 28:00
+
+---
+
+This structured summary provides a clear and concise overview of the video content, divided into sections and sub-sections with relevant timestamps for easy reference.
