--- a/Sec 1 - SAP Intro/6. User Roles for Sourcing Procurement.md
+++ b/Sec 1 - SAP Intro/6. User Roles for Sourcing Procurement.md
@@ -51,3 +51,66 @@
 ```
 
 Would you like any refinements or additional details? 🚀
+
+### [Section 1: Introduction to SAP Fiori Roles for Sourcing and Procurement]
+**Brief Description**: This section explains the roles required to access SAP Fiori applications for SAP S/4HANA Sourcing and Procurement.
+
+- **[Sub-section 1: Key Roles for Procurement Processes]**: To perform tasks like creating purchase orders, goods receipts, and supplier invoices in SAP Fiori, specific roles are required. For example:
+  - **SAP_BR_PURCHASER**: For creating purchase orders.
+  - **SAP_BR_INVENTORY_MANAGER**: For creating goods receipts.
+  - **SAP_BR_ACCOUNTANT_PROCUREMENT**: For creating supplier invoices.  
+  *Timestamp*: 0:02 - 2:00
+
+- **[Sub-section 2: Role Assignment for Specific Apps]**: Each Fiori app requires specific roles. For instance, the "Create Purchase Order" app requires roles like **SAP_BR_CENTRAL_PURCHASER**, **SAP_BR_OPERATIONAL_PURCHASER**, and **SAP_BR_SETTLEMENT_CLERK**.  
+  *Timestamp*: 2:00 - 4:00
+
+---
+
+### [Section 2: Using the SAP Fiori Apps Library to Identify Roles]
+**Brief Description**: This section demonstrates how to use the SAP Fiori Apps Library to identify the roles required for specific applications.
+
+- **[Sub-section 1: Accessing the SAP Fiori Apps Library]**: Users can visit the SAP Fiori Apps Library website to search for specific apps (e.g., "Create Purchase Order") and view the required roles.  
+  *Timestamp*: 4:00 - 6:00
+
+- **[Sub-section 2: Identifying Required Roles]**: On the app's details page, users can find the list of roles needed to access the app. For example, the "Create Purchase Order" app requires roles like **SAP_BR_CENTRAL_PURCHASER** and **SAP_BR_OPERATIONAL_PURCHASER**.  
+  *Timestamp*: 6:00 - 8:00
+
+---
+
+### [Section 3: Creating and Assigning Custom Roles]
+**Brief Description**: This section explains how to create and assign custom roles to users in SAP.
+
+- **[Sub-section 1: Copying Standard Roles]**: To avoid modifying standard roles, users can copy a standard role (e.g., **SAP_BR_PURCHASER**) and create a custom role starting with "Z" (e.g., **Z_BR_PURCHASER**). This is done using transaction code **PFCG** (Role Maintenance).  
+  *Timestamp*: 8:00 - 12:00
+
+- **[Sub-section 2: Assigning Roles to Users]**: After creating the custom role, it can be assigned to a user using transaction code **SU01** (User Maintenance). The role is added to the user's record, enabling access to the relevant Fiori apps.  
+  *Timestamp*: 12:00 - 14:00
+
+---
+
+### [Section 4: Verifying Role Assignment]
+**Brief Description**: This section demonstrates how to verify that the role has been successfully assigned and that the user can access the required apps.
+
+- **[Sub-section 1: Checking Role Assignment]**: After assigning the role (e.g., **Z_BR_PURCHASER**), users can log in to SAP Fiori and verify that the relevant apps (e.g., "Create Purchase Order") are now visible on their Launchpad.  
+  *Timestamp*: 14:00 - 16:00
+
+- **[Sub-section 2: Example of Accessible Apps]**: Once the role is assigned, users can see apps like "Purchase Order Processing" and other procurement-related applications on their Fiori Launchpad.  
+  *Timestamp*: 16:00 - 18:00
+
+---
+
+### [Section 5: Key Takeaways]
+**Brief Description**: This section summarizes the key points discussed in the lecture.
+
+- **[Sub-section 1: Role-Based Access in SAP Fiori]**: SAP Fiori applications are role-based, and users must have the appropriate roles assigned to access specific apps.  
+  *Timestamp*: 18:00 - 20:00
+
+- **[Sub-section 2: Using the SAP Fiori Apps Library]**: The SAP Fiori Apps Library is a valuable resource for identifying the roles required for specific applications.  
+  *Timestamp*: 20:00 - 22:00
+
+- **[Sub-section 3: Creating and Assigning Custom Roles]**: Custom roles should be created by copying standard roles and starting with "Z" to avoid conflicts. These roles can then be assigned to users using transaction codes **PFCG** and **SU01**.  
+  *Timestamp*: 22:00 - 24:00
+
+---
+
+This structured summary provides a clear and concise overview of the video content, divided into sections and sub-sections with relevant timestamps for easy reference.
